build_log.txt
Fetching distribution.
Downloading https://services.gradle.org/distributions/gradle-8.5-bin.zip
............10%.............20%............30%.............40%.............50%............60%.............70%.............80%............90%.............100%

Welcome to Gradle 8.5!

Here are the highlights of this release:
 - Support for running on Java 21
 - Faster first use with Kotlin DSL
 - Improved error and warning messages

For more details see https://docs.gradle.org/8.5/release-notes.html

Starting a Gradle Daemon (subsequent builds will be faster)
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors
> Task :app:generateDebugBuildConfig
> Task :app:generateDebugResValues
> Task :app:checkDebugAarMetadata
> Task :app:mapDebugSourceSetPaths
> Task :app:generateDebugResources
> Task :app:packageDebugResources
> Task :app:mergeDebugResources
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:javaPreCompileDebug
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugManifestForPackage
> Task :app:processDebugResources
> Task :app:checkDebugDuplicateClasses
> Task :app:desugarDebugFileDependencies
> Task :app:compileDebugKotlin
w: file:///home/runner/work/HIATOO/HIATOO/app/src/main/java/com/example/hiatoo/ui/SettingsScreen.kt:50:49 'ArrowBack: ImageVector' is deprecated. Use the AutoMirrored version at Icons.AutoMirrored.Filled.ArrowBack

> Task :app:mergeExtDexDebug

> Task :app:compileDebugJavaWithJavac FAILED
/home/runner/work/HIATOO/HIATOO/app/build/generated/source/buildConfig/debug/com/example/hiatoo/BuildConfig.java:13: error: text blocks are not supported in -source 8
  public static final String ELEVENLABS_API_KEY = """";
                                                  ^
  (use -source 15 or higher to enable text blocks)
/home/runner/work/HIATOO/HIATOO/app/build/generated/source/buildConfig/debug/com/example/hiatoo/BuildConfig.java:13: error: illegal text block open delimiter sequence, missing line terminator
  public static final String ELEVENLABS_API_KEY = """";
                                                     ^
/home/runner/work/HIATOO/HIATOO/app/build/generated/source/buildConfig/debug/com/example/hiatoo/BuildConfig.java:15: error: illegal text block open delimiter sequence, missing line terminator
  public static final String GEMINI_API_KEY = """";
                                                 ^
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2m 44s
23 actionable tasks: 23 executed
